# MultiCamManager

./: .gitignore  CMakeLists.txt  Doxyfile  ReadMe.md  main.cpp  resources.qrc
application/: Camera.cpp  Camera.h  CamerasManager.cpp  CamerasManager.h  videosaver.cpp  videosaver.h
html/: _camera_8h_source.html  _camera_parameters_8h_source.html  _camera_simulator_lib_8h_source.html  _cameras_manager_8h_source.html  _log_entry_8h_source.html  annotated.html  annotated_dup.js  camerarowwidget_8h_source.html  class_camera-members.html  class_camera.html  class_camera.js  class_camera_row_widget-members.html  class_camera_row_widget.html  class_camera_simulator_d_l_l.html  class_camera_simulator_lib-members.html  class_camera_simulator_lib.html  class_camera_simulator_lib.js  class_cameras_manager-members.html  class_cameras_manager.html  class_cameras_manager.js  class_main_window-members.html  class_main_window.html  class_main_window.js  class_q_c_p_abstract_item-members.html  class_q_c_p_abstract_item.html  class_q_c_p_abstract_legend_item-members.html  class_q_c_p_abstract_legend_item.html  class_q_c_p_abstract_paint_buffer-members.html  class_q_c_p_abstract_paint_buffer.html  class_q_c_p_abstract_plottable-members.html  class_q_c_p_abstract_plottable.html  class_q_c_p_abstract_plottable1_d-members.html  class_q_c_p_abstract_plottable1_d.html  class_q_c_p_axis-members.html  class_q_c_p_axis.html  class_q_c_p_axis_painter_private-members.html  class_q_c_p_axis_painter_private.html  class_q_c_p_axis_rect-members.html  class_q_c_p_axis_rect.html  class_q_c_p_axis_ticker-members.html  (+268 more)
html/search/: all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_6.js  functions_0.js  functions_10.js  functions_11.js  functions_12.js  functions_14.js  functions_17.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  functions_a.js  functions_d.js  functions_e.js  pages_0.js  (+27 more)
include/: CameraParameters.h  LogEntry.h
latex/: _camera_8h_source.tex  _camera_parameters_8h_source.tex  _camera_simulator_lib_8h_source.tex  _cameras_manager_8h_source.tex  _log_entry_8h_source.tex  annotated.tex  camerarowwidget_8h_source.tex  class_camera.eps  class_camera.tex  class_camera_row_widget.eps  class_camera_row_widget.tex  class_camera_simulator_d_l_l.tex  class_camera_simulator_lib.tex  class_cameras_manager.eps  class_cameras_manager.tex  class_main_window.tex  class_q_c_p_abstract_item.tex  class_q_c_p_abstract_legend_item.tex  class_q_c_p_abstract_paint_buffer.tex  class_q_c_p_abstract_plottable.tex  class_q_c_p_abstract_plottable1_d.tex  class_q_c_p_axis.tex  class_q_c_p_axis_painter_private.tex  class_q_c_p_axis_rect.tex  class_q_c_p_axis_ticker.tex  class_q_c_p_axis_ticker_date_time.tex  class_q_c_p_axis_ticker_fixed.tex  class_q_c_p_axis_ticker_log.tex  class_q_c_p_axis_ticker_pi.tex  class_q_c_p_axis_ticker_text.tex  class_q_c_p_axis_ticker_time.tex  class_q_c_p_bars.tex  class_q_c_p_bars_data.tex  class_q_c_p_bars_group.tex  class_q_c_p_color_gradient.tex  class_q_c_p_color_map.tex  class_q_c_p_color_map_data.tex  class_q_c_p_color_scale.tex  class_q_c_p_color_scale_axis_rect_private.tex  class_q_c_p_curve.tex  (+74 more)
presentation/: camerarowwidget.cpp  camerarowwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
